--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/clyvekokotiko/cse341-node/issues"
   },
-  "homepage": "https://github.com/clyvekokotiko/cse341-node#readme"
+  "homepage": "https://github.com/clyvekokotiko/cse341-node#readme",
+  "dependencies": {
+    "express": "^4.21.0"
+  }
 }
